angular-app-example/gke/gke-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-app
  labels:
    app: angular-app
spec:
  type: NodePort
  selector:
    app: angular-app
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
