angular-app-example/gke/gke-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-app-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "angular-app-ip"
    networking.gke.io/managed-certificates: "angular-app-certificate"
    networking.gke.io/v1beta1.FrontendConfig: "angular-app-frontend-config"
spec:
  rules:
  - host: ${APP_DOMAIN}
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: angular-app
            port:
              number: 80
